@@ -52,7 +52,7 @@ if ~isempty(box1),
     xmin = box1(1, :);
     xmax = box1(2, :);
     delta = xmax - xmin;
-    zz = (xx - repmat(xmin, n, 1)) ./ repmat(1./delta, n, 1);
+    zz = (xx - repmat(xmin, n, 1)) .* repmat(1./delta, n, 1);
 else
     zz = xx;
 end
@@ -76,3 +76,27 @@ else
 end
 
 end % function stk_rescale
+
+%!shared x
+%!  x = rand(10, 4);
+%!test
+%!  y = stk_rescale(x, [], []);
+%!  assert(stk_isequal_tolabs(x, y));
+%!test
+%!  x = struct('a', x);
+%!  y = stk_rescale(x, [], []);
+%!  assert(stk_isequal_tolabs(x, y));
+
+%!test
+%!  y = stk_rescale(0.5, [], [0; 2]);
+%!  assert(stk_isequal_tolabs(y, 1.0));
+%!test
+%!  y = stk_rescale(0.5, [0; 1], [0; 2]);
+%!  assert(stk_isequal_tolabs(y, 1.0));
+
+%!test
+%!  y = stk_rescale(0.5, [0; 2], []);
+%!  assert(stk_isequal_tolabs(y, 0.25));
+%!test
+%!  y = stk_rescale(0.5, [0; 2], [0; 1]);
+%!  assert(stk_isequal_tolabs(y, 0.25));
